--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Hello,world!!</h1>
-<h2><%= @title %></h2>
+<h2><%= @article.title %></h2>
+<p><%= @article.content %></p>
+
 <%= link_to 'About', about_path %>
