--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,1 +1,15 @@
-<p>new</p>
+<div class=container>
+  <h1>新規投稿</h1>
+  <%= form_with model: @article, url: articles_path, method: 'post', local: true do |f| %>
+    <div>
+      <%= f.label :title, 'タイトル', class: 'label' %>
+      <%= f.text_field :title, class: 'text' %>
+    </div>
+    <div>
+      <%= f.label :content, '内容', class: 'label' %>
+      <%= f.text_area :content, class: 'textarea' %>
+    </div>
+    <%= f.submit '保存', class: 'btn-primary' %>
+
+  <% end %>
+</div>
