--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,10 @@
 <div class=container>
   <h1>新規投稿</h1>
+  <ul>
+   <% @article.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+  </ul>
   <%= form_with model: @article, url: articles_path, method: 'post', local: true do |f| %>
     <div>
       <%= f.label :title, 'タイトル', class: 'label' %>
