--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_field :title, class: 'text' %>
     </div>
     <div>
-      <%= f.label :content, '内容', class: 'label' %>
+      <%= f.label :content, '本文', class: 'label' %>
       <%= f.text_area :content, class: 'textarea' %>
     </div>
     <%= f.submit '保存', class: 'btn-primary' %>
