--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,20 +1,1 @@
-<div class=container>
-  <h1>新規投稿</h1>
-  <ul>
-   <% @article.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-   <% end %>
-  </ul>
-  <%= form_with model: @article, url: articles_path, method: 'post', local: true do |f| %>
-    <div>
-      <%= f.label :title, 'タイトル', class: 'label' %>
-      <%= f.text_field :title, class: 'text' %>
-    </div>
-    <div>
-      <%= f.label :content, '本文', class: 'label' %>
-      <%= f.text_area :content, class: 'textarea' %>
-    </div>
-    <%= f.submit '保存', class: 'btn-primary' %>
-
-  <% end %>
-</div>
+<%= render partial: 'article_form', locals: {title: '新規投稿', article: @article} %>
