feat: 記事の一覧画面と詳細画面で表示しているユーザー名をuserオブジェクトから取得し、表示するように修正しました

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,7 +3,7 @@
   .article_detail
     = image_tag 'default-avatar.png'
     %div
-      %p cohki0305
+      %p= @article.user.present? ? @article.user.display_name : 'unknown user'
       %p= @article.display_created_at
     - if current_user == @article.user
       .article_detail_actions
