--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -5,7 +5,7 @@
     %div
       %p= @article.user.present? ? @article.user.display_name : 'unknown user'
       %p= @article.display_created_at
-    - if current_user == @article.user
+    - if user_signed_in? && current_user.has_written?(@article)
       .article_detail_actions
         .dropdown
           = image_tag 'actions.svg', class: 'dropbtn'
