--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -8,6 +8,10 @@ $avatar-size: 32px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 
+  h2 {
+    font-size: 16px;
+  }
+
   &_title {
     font-size: 22px;
   }
@@ -35,6 +39,10 @@ $avatar-size: 32px;
 
   &_content {
     padding: 24px 0 32px;
+  }
+
+  &_comment {
+    padding: 12px 0;
   }
 
   &_heart {
