--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,7 +5,8 @@
       新着記事一覧
     .tabs_item
       タイムライン
-  = render partial: 'articles_index', locals: { articles: @articles }
+  - @articles.each do |article|
+    = render partial: 'commons/articles_index', locals: { article: article }
   = link_to new_article_path do
     .float_btn
       %i.fa.fa-plus
