--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -10,3 +10,7 @@
           = link_to 'Edit', edit_profile_path
       .profilePage_user_introduction
         あああああああああああああああああああああああああああああああああああああああああああああああああああああ
+
+.container
+  - current_user.articles.each do |article|
+    = render partial: 'commons/articles_index', locals: { article: article }
