--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,1 +1,23 @@
-edit
+.container
+  %h1 プロフィール編集
+  %ul
+    - @profile.errors.full_messages.each do |message|
+      %li= message
+
+  = form_with model: @profile, url: profile_path, method: 'put', local: true do |f|
+    %div
+      = f.label :nickname, 'ハンドルネーム', class: 'label'
+      = f.text_field :nickname, class: 'text'
+    %div
+      = f.label :introduction, '自己紹介', class: 'label'
+      = f.text_area :introduction
+    %div
+      = f.label :gender, '性別', class: 'label'
+      = f.select :gender, Profile.genders.keys, {}, class: 'text'
+    %div
+      = f.label :birthday, '生年月日', class: 'label'
+      = f.date_field :birthday, class: 'text'
+    %div
+      = f.label :subscribed, '通知を受け取る', class: 'label'
+      = f.check_box :subscribed
+    = f.submit '保存', class: 'btn-primary'
