feat: 性別を定義したenumを日本語化しました

--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -13,7 +13,7 @@
       = f.text_area :introduction
     %div
       = f.label :gender, '性別', class: 'label'
-      = f.select :gender, Profile.genders.keys, {}, class: 'text'
+      = f.select :gender, Profile.genders.map { |k, v| [I18n.t("enum.genders.#{k}"), k]}, {}, class: 'text'
     %div
       = f.label :birthday, '生年月日', class: 'label'
       = f.date_field :birthday, class: 'text'
