--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -6,6 +6,9 @@
 
   = form_with model: @profile, url: profile_path, method: 'put', local: true do |f|
     %div
+      = f.label :avatar, 'アバター', class: 'label'
+      = f.file_field :avatar
+    %div
       = f.label :nickname, 'ハンドルネーム', class: 'label'
       = f.text_field :nickname, class: 'text'
     %div
