--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,4 +1,7 @@
 .article
+  - if @article.eye_catch.attached?
+    .article_image
+      = image_tag @article.eye_catch
   %h1.article_title= @article.title
   .article_detail
     = image_tag @article.user.avatar_image
