--- a/app/views/commons/_articles_index.html.haml
+++ b/app/views/commons/_articles_index.html.haml
@@ -1,7 +1,8 @@
 = link_to article_path(article) do
   .card
-    .card_image
-      = image_tag 'eyecatch1.png'
+    - if article.eye_catch.attached?
+      .card_image
+        = image_tag article.eye_catch
     .card_content
       .card_title
         = article.title
