refactor: hamlファイルに記述していた処理の一部をhelperメソッドとして再定義しました

--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -16,7 +16,7 @@
       = f.text_area :introduction
     %div
       = f.label :gender, '性別', class: 'label'
-      = f.select :gender, Profile.genders.map { |k, v| [I18n.t("enum.genders.#{k}"), k]}, {}, class: 'text'
+      = f.select :gender, map_genders_array, {}, class: 'text'
     %div
       = f.label :birthday, '生年月日', class: 'label'
       = f.date_field :birthday, class: 'text'
