--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,16 +1,1 @@
-.container.profilePage
-  .profilePage_user
-    .profilePage_user_image
-      = image_tag current_user.avatar_image
-    .profilePage_user_basicInfo
-      .profilePage_user_name
-        .profilePage_user_displayName
-          #{current_user.display_name} (#{current_user.display_age}・#{i18n_gender(current_user)})
-        .profilePage_user_actionButton
-          = link_to 'Edit', edit_profile_path
-      .profilePage_user_introduction
-        %p= current_user.profile&.introduction
-
-.container
-  - current_user.articles.each do |article|
-    = render partial: 'commons/articles_index', locals: { article: article }
+= render partial: 'commons/display_profile', locals: { user: current_user }
