--- a/app/views/timelines/show.html.haml
+++ b/app/views/timelines/show.html.haml
@@ -1,3 +1,4 @@
 .container
+  = render 'commons/articles_tabs'
   - @articles.each do |article|
     = render partial: 'commons/articles_index', locals: { article: article }
