refactor: ルートページとタイムラインページの共通箇所を部分テンプレート化しました

--- a/app/views/timelines/show.html.haml
+++ b/app/views/timelines/show.html.haml
@@ -1,4 +1,2 @@
 .container
-  = render 'commons/articles_tabs'
-  - @articles.each do |article|
-    = render partial: 'commons/articles_index', locals: { article: article }
+  = render 'commons/articles', articles: @articles
