--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,8 +1,6 @@
 %h1 HOME
 .container
-  = render 'commons/articles_tabs'
-  - @articles.each do |article|
-    = render partial: 'commons/articles_index', locals: { article: article }
+  = render 'commons/articles', articles: @articles
   = link_to new_article_path do
     .float_btn
       %i.fa.fa-plus
