fix: タイムラインでも新規記事作成用のぼたんを表示するように修正縞板

--- a/app/views/commons/_articles.html.haml
+++ b/app/views/commons/_articles.html.haml
@@ -1,3 +1,6 @@
 = render 'commons/articles_tabs'
 - articles.each do |article|
   = render partial: 'commons/articles_index', locals: { article: article }
+= link_to new_article_path do
+  .float_btn
+    %i.fa.fa-plus
