--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,4 +1,4 @@
-.article
+.article#article-show{data: {article_id: @article.id}}
   - if @article.eye_catch.attached?
     .article_image
       = image_tag @article.eye_catch
@@ -19,14 +19,10 @@
   .article_content
     = @article.content
   -if user_signed_in?
-    -if current_user.has_liked?(@article)
-      .article_heart
-        = link_to article_like_path(@article), data: { "turbo-method": :delete } do
-          = image_tag 'heart-active.svg'
-    - else
-      .article_heart
-        = link_to article_like_path(@article), data: { "turbo-method": :post } do
-          = image_tag 'heart.svg'
+    .article_heart.heart-active.hidden
+      = image_tag 'heart-active.svg'
+    .article_heart.heart-inactive.hidden
+      = image_tag 'heart.svg'
 
 
 .article
