--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -27,9 +27,7 @@
 
 .article
   %h2 コメント一覧
-  .article_comment
-    - @comments.each do |comment|
-      %p= comment.content
+  .comments_container
 
 .container
   = link_to new_article_comment_path(@article) do
