--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -30,6 +30,9 @@
   .comments_container
 
 .container
-  = link_to new_article_comment_path(@article) do
+  .js-comment-form-toggle.btn-secondly
+    コメントを追加
+  .comment-form.hidden
+    = textarea_tag :comment, nil, placeholder: "コメントを追加してください", rows: 5, class: "sm"
     .btn-secondly
       コメントを追加
