feat:　コメント送信機能をajax化しました

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -34,5 +34,5 @@
     コメントを追加
   .comment-form.hidden
     = textarea_tag :comment, nil, placeholder: "コメントを追加してください", rows: 5, class: "sm"
-    .btn-secondly
+    .btn-secondly#comment-submit-btn
       コメントを追加
