--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -14,8 +14,8 @@
         .dropdown
           = image_tag 'actions.svg', class: 'dropbtn'
           .dropdown-content.mini
-            = link_to '編集する', edit_article_path(@article)
-            = link_to '削除する', article_path(@article), data:{ turbo_method: :delete, turbo_confirm: "削除してもよろしいですか？" }
+            = link_to '編集する', edit_app_article_path(@article)
+            = link_to '削除する', app_article_path(@article), data:{ turbo_method: :delete, turbo_confirm: "削除してもよろしいですか？" }
   .article_content
     = @article.content
   -if user_signed_in?
